--- a/tasks/install_opam.yml
+++ b/tasks/install_opam.yml
@@ -1,20 +1,21 @@
 ---
-
 - name: Install opam using package manager
   when: opam_install_method == 'package_manager'
   package:
     name: "{{ opam_package_name }}"
     state: present
 
-- name: Install opam directly
+- name: Install opam using direct install
   when: opam_install_method == 'direct'
   block:
-    - ansible.builtin.package:
-      name: "{{ item }}"
-      state: present
+    - name: Installing opam dependencies
+      ansible.builtin.package:
+        name: "{{ item }}"
+        state: present
       loop: "{{ opam_external_dependencies }}"
-    - expect:
-      command: bash -c "sh <(curl -fsSL https://opam.ocaml.org/install.sh)"
-      responses:
-        Where should it be installed ?: ""
-      timeout: 120
+    - name: Install opam
+      expect:
+        command: bash -c "sh <(curl -fsSL https://opam.ocaml.org/install.sh)"
+        responses:
+          Where should it be installed ?: ""
+        timeout: 120
