--- a/tasks/install_opam.yml
+++ b/tasks/install_opam.yml
@@ -1,20 +1,21 @@
 ---
 - name: Install opam using package manager
   when: opam_install_method == 'package_manager'
+  become: true
   package:
     name: "{{ opam_package_name }}"
     state: present
+  timeout: 60
 
 - name: Install opam using direct install
   when: opam_install_method == 'direct'
   block:
-    - name: Installing opam dependencies
+    - name: Installing opam external dependencies
       ansible.builtin.package:
         name: "{{ item }}"
         state: present
       loop: "{{ opam_external_dependencies }}"
-    - name: Install opam
-      expect:
+    - expect:
         command: bash -c "sh <(curl -fsSL https://opam.ocaml.org/install.sh)"
         responses:
           Where should it be installed ?: ""
