--- a/tasks/install_one_switch.yml
+++ b/tasks/install_one_switch.yml
@@ -1,29 +1,43 @@
 - name: Install OPAM switch "{{ item.name }}"
   environment:
-    OPAMROOT: "{{ (opam_install_location == 'system_wide') | ternary(opam_root_system_wide, opam_root_user) }}"
+    OPAMROOT: "{{ (opam_install_location == 'system_wide') | ternary(opam_root_location_system_wide, opam_root_location_user) }}"
     OPAMROOTISOK: "true"
   block:
-    # - name: Check if OPAM switch "{{ item.name }}" exists
-    #   ansible.builtin.command:
-    #     cmd: opam switch list --short
-    #   register: opam_switch_list
-    #   changed_when: false
-
-    - name: Create OPAM switch "{{ item.name }}"
+    - name: switch "{{ item.name }}" - create switch
+      become: true
+      become_user: "{{ (opam_install_location == 'system_wide') | ternary('root', opam_user) }}"
       ansible.builtin.command:
         cmd: opam switch create {{ item.name }} {{ item.compiler }} --yes
       register: opam_switch_create_output
-      # when: "item.name not in opam_switch_list.stdout"
-      changed_when: "'[ERROR]' in opam_switch_create_output.stdout and '[ERROR] There already is an installed switch named' not in opam_switch_create_output.stdout"
-      failed_when: "'[ERROR]' in opam_switch_create_output.stdout and '[ERROR] There already is an installed switch named' not in opam_switch_create_output.stdout"
+      changed_when: "'[ERROR] There already is an installed switch named' not in opam_switch_create_output.stderr"
+      failed_when:
+        - opam_switch_create_output.rc != 0
+        - "'[ERROR] There already is an installed switch named' not in opam_switch_create_output.stderr"
 
-    - name: Install packages in each switch "{{ item.name }}"
+    - name: switch "{{ item.name }}" - get external dependencies
+      become_user: "{{ (opam_install_location == 'system_wide') | ternary('root', opam_user) }}"
+      ansible.builtin.command:
+        cmd: opam install --confirm-level=unsafe-yes --color=never --switch={{ item.name }} --depext-only --dry-run {{ item.packages | join(' ') }}
+      register: opam_install_depext_output
+      changed_when: false
+    
+    - name: switch "{{ item.name }}" - extract external dependencies
+      set_fact:
+        required_packages: "{{ opam_install_depext_output.stdout_lines | select('match', '^    ') | map('regex_replace', '^    ', '') | list }}"
+
+    - name: switch "{{ item.name }}" - install packages external dependencies
+      become: true
+      ansible.builtin.package:
+        name: "{{ required_packages }}"
+        state: present
+      when: required_packages | length > 0
+
+    - name: switch "{{ item.name }}" - install packages
       ansible.builtin.command:
         cmd: opam install --confirm-level=unsafe-yes --color=never --switch={{ item.name }} {{ item.packages | join(' ') }}
-      environment:
-        OPAMROOT: "{{ (opam_install_location == 'system_wide') | ternary(opam_root_system_wide, opam_root_user) }}"
-        OPAMROOTISOK: "true"
+      become: true
+      become_user: "{{ (opam_install_location == 'system_wide') | ternary('root', opam_user) }}"
       register: opam_install_output
       when: item.packages | length > 0
-      changed_when: "'=== install' in opam_install_output.stdout"
-      failed_when: "'[ERROR]' in opam_install_output.stdout or 'No solution found, exiting' in opam_install_output.stdout"
+      changed_when: "'Done.' in opam_install_output.stdout"
+      failed_when: opam_install_output.rc != 0
