--- a/tasks/install_opam.yml
+++ b/tasks/install_opam.yml
@@ -1,22 +1,25 @@
 ---
-- name: Install opam using package manager
-  when: opam_install_method == 'package_manager'
-  package:
-    name: "{{ opam_package_name }}"
-    state: present
-  timeout: 60
+- name: Install Opam
+  import_tasks: install_opam/install_{{ opam_install_method }}.yml
+  # no_log: true
+# - name: Install opam using package manager
+#   when: opam_install_method == 'package_manager'
+#   package:
+#     name: "{{ opam_package_name }}"
+#     state: present
+#   timeout: 60
 
-- name: Install opam using direct install
-  when: opam_install_method == 'direct'
-  block:
-    - name: Installing opam external dependencies
-      ansible.builtin.package:
-        name: "{{ item }}"
-        state: present
-      loop: "{{ opam_external_dependencies }}"
-    - expect:
-        command: bash -c "sh <(curl -fsSL https://opam.ocaml.org/install.sh)"
-        responses:
-          Where should it be installed ?: ""
-        timeout: 120
-        creates: "/usr/local/bin/opam"
+# - name: Install opam using direct install
+#   when: opam_install_method == 'direct'
+#   block:
+#     - name: Installing opam external dependencies
+#       ansible.builtin.package:
+#         name: "{{ item }}"
+#         state: present
+#       loop: "{{ opam_external_dependencies }}"
+#     - expect:
+#         command: bash -c "sh <(curl -fsSL https://opam.ocaml.org/install.sh)"
+#         responses:
+#           Where should it be installed ?: ""
+#         timeout: 120
+#         creates: "/usr/local/bin/opam"
