added optionnal commands to install.sh

--- a/tasks/install_opam/install_direct.yml
+++ b/tasks/install_opam/install_direct.yml
@@ -9,7 +9,7 @@
       loop: "{{ opam_external_dependencies }}"
     - name: Install Opam using direct install script
       expect:
-        command: bash -c "sh <(curl -fsSL https://opam.ocaml.org/install.sh)"
+        command: bash -c "sh <(curl -fsSL https://opam.ocaml.org/install.sh {{ opam_install_options_cli_options }})"
         responses:
           Where should it be installed ?: ""
         timeout: 30
