fix in output of depexts installation

--- a/tasks/install_one_switch.yml
+++ b/tasks/install_one_switch.yml
@@ -30,7 +30,7 @@
       ansible.builtin.package:
         name: "{{ required_packages }}"
         state: present
-      when: required_packages | length > 0
+      changed_when: required_packages | length > 0
 
     - name: switch "{{ item.name }}" - install packages
       ansible.builtin.command:
