--- a/tasks/configure_opam/configure_system_wide.yml
+++ b/tasks/configure_opam/configure_system_wide.yml
@@ -1,5 +1,6 @@
 - name: Configure OPAM for system-wide installation
   when: opam_install_location == 'system_wide'
+  become: true
   block:
     - name: Initialize OPAM (system-wide)
       shell: |
