--- a/tasks/install_opam/install_package_manager.yml
+++ b/tasks/install_opam/install_package_manager.yml
@@ -1,4 +1,5 @@
 - name: Install opam using package manager
+  become: true
   when: opam_install_method == 'package_manager'
   package:
     name: "{{ opam_package_name }}"
