--- a/tasks/install_switches.yml
+++ b/tasks/install_switches.yml
@@ -1,10 +1,9 @@
 - name: Install OPAM switches
-  include_tasks:
-    file: install_one_switch.yml
+  ansible.builtin.include_tasks: install_one_switch.yml
   loop: "{{ opam_switches }}"
 
-- name: Configure the default switch as "{{ default_switch}}"
+- name: Configure the default switch as "{{ default_switch }}"
   become: true
   ansible.builtin.command:
     cmd: "opam switch --root={{ (opam_install_location == 'system_wide') | ternary(opam_root_location_system_wide, opam_root_location_user) }} {{ default_switch }}"
-  changed_when: False
+  changed_when: false
