Syntax fixed in direct install script when using additionnal cli options

--- a/tasks/install_opam/install_direct.yml
+++ b/tasks/install_opam/install_direct.yml
@@ -13,7 +13,7 @@
       loop: "{{ opam_external_dependencies }}"
     - name: Install Opam using direct install script
       ansible.builtin.expect:
-        command: bash -c "sh <(curl -fsSL https://opam.ocaml.org/install.sh {{ opam_install_options_cli_options }})"
+        command: bash -c "sh <(curl -fsSL https://opam.ocaml.org/install.sh) {{ opam_install_cli_options }}"
         responses:
           Where should it be installed ?: ""
         timeout: 30
