--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,5 @@
 ---
 - name: Install and configure opam
-  become: true
   block:
     - name: Install Opam executable {{ opam_install_method }}
       ansible.builtin.include_tasks: install_opam/install_{{ opam_install_method }}.yml
@@ -18,3 +17,9 @@
         - ansible.builtin.import_tasks: postinstall/jupyter.yml
 
         - ansible.builtin.import_tasks: postinstall/vscode.yml
+
+    - name: Configure the default switch as "{{ default_switch }}"
+      become: true
+      ansible.builtin.command:
+        cmd: "opam switch --root={{ (opam_install_location == 'system_wide') | ternary(opam_root_location_system_wide, opam_root_location_user) }} {{ default_switch }}"
+      changed_when: false
