--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -49,12 +49,8 @@ opam_user: "{{ ansible_user_id }}"
 ### Opam packages ###
 #####################
 
-opam_switches:
-  - name: "default"
-    compiler: "4.14.2"
-    packages:
-      - dune
-default_switch: "default"
+opam_switches: []
+default_switch: ""
 
 #########################
 ### Post-installation ###
