--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,3 +23,4 @@
       ansible.builtin.command:
         cmd: "opam switch --root={{ (opam_install_location == 'system_wide') | ternary(opam_root_location_system_wide, opam_root_location_user) }} {{ default_switch }}"
       changed_when: false
+      when: default_switch != ""
